--- a/chel/index.html
+++ b/chel/index.html
@@ -2,6 +2,8 @@
 <html>
 <head><title>чел ты...</title></head>
 <body>
-<h1 style="font-size: 72pt;">чел ты...</h1>
+<div style="width: 100%; text-align: center; font-size: 96pt; font-weight: bold;">
+чел ты...
+</div>
 </body>
 </html>
