--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>elkcl.ru</title>
-  </head>
-  <body>
-    <h1>Hi!</h1>
-    <p>This is just a landing page. There's nothing interesting here at the moment.</p>
-  </body>
+<!doctype html>
+<html> 
+<head>
+<title>elkcl.ru</title>
+<script> 
+window.onload = () => {window.location.replace("https://youtu.be/dQw4w9WgXcQ");};
+</script>
+</head>
+<body></body>
+
 </html>
