say gex (release)

--- a/say_gex/index.html
+++ b/say_gex/index.html
@@ -5,7 +5,7 @@
     <title>average перфокарты enjoyer</title>
     <script>
         const RICKROLL_LINK = "https://youtu.be/dQw4w9WgXcQ";
-        const LEGIT_LINK = "https://cs.msu.ru";
+        const LEGIT_LINK = "https://ashley.sch9.ru/msucmc";
         let link = null;
         if (localStorage.getItem("visited") == null) {
             link = RICKROLL_LINK;
