--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html> 
 <head>
 <title>elkcl.ru</title>
-<script> 
-window.onload = () => {window.location.replace("https://youtu.be/dQw4w9WgXcQ");};
-</script>
+
 </head>
-<body></body>
+<body>
+  <h1>Elk Cloner</h1>
+  <p>Hi, my name is Ilya (aka Elk Cloner) and I am an undergrad studying computer science. Among other things, I am interested in functional and systems programming and in mathematics.</p>
+  <p><a href="https://github.com/elkcl" alt="GitHub">Here's my Github.</a> You can contact me at {me, pub, dev} &lt;at&gt; elkcl &lt;dot&gt; ru.</p>
+  <p><small>There used to be a rickroll here. This is now a landing page, but it may become something like a blog in the future.</small></p>
+</body>
 
 </html>
