--- a/game/index.html
+++ b/game/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
-<head><title>ПРОИГРАЛ</title></head>
+<head><title>THE GAME</title></head>
 <body>
 <div style="width: 100%; text-align: center; font-size: 96pt; font-weight: bold;">
-ты проиграл.
+you have lost The Game.
 </div>
 </body>
 </html>
